--- a/news-JS-main/.eslintrc.json
+++ b/news-JS-main/.eslintrc.json
@@ -1,12 +1,14 @@
 {
     "plugins": ["prettier", "import"],
     "extends": [
+        "airbnb-typescript/base",
         "plugin:prettier/recommended",
         "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 2020,
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "env": {
         "es6": true,
@@ -16,6 +18,7 @@
     "rules": {
         "no-debugger": "off",
         "no-console": 0,
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "@typescript-eslint/lines-between-class-members": "off"
     }
 }
