--- a/news-JS-main/package.json
+++ b/news-JS-main/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
+        "@types/aos": "^3.0.4",
         "@typescript-eslint/eslint-plugin": "^5.5.0",
         "@typescript-eslint/parser": "^5.5.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -36,5 +37,8 @@
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2",
         "webpack-merge": "^5.7.3"
+    },
+    "dependencies": {
+        "aos": "^3.0.0-beta.6"
     }
 }
