feat: set configurations and add basic structure

--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -4,7 +4,7 @@
   "description": "My webpack project",
   "main": "data.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -17,8 +17,13 @@
     "@webpack-cli/generators": "^2.4.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.25.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
     "prettier": "^2.5.1",
