--- a/christmas-task/.eslintrc.json
+++ b/christmas-task/.eslintrc.json
@@ -9,7 +9,7 @@
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
-    "project": "./tsconfig.json" 
+    "project": "./tsconfig.json"
   },
   "env": {
     "es6": true,
@@ -20,6 +20,7 @@
     "no-debugger": "off",
     "no-console": "warn",
     "class-methods-use-this": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/lines-between-class-members": "off"
   }
