--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -24,9 +24,11 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-plugin-import": "^2.25.3",
+    "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
     "prettier": "^2.5.1",
+    "raw-loader": "^4.0.2",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
