--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -5,7 +5,8 @@
     "strict": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "moduleResolution": "node"
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts", "typings.d.ts"]
 }
