--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -3,13 +3,20 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@webpack-cli/generators": "^2.4.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
+    "prettier": "2.5.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "source-map-loader": "^3.0.0",
@@ -26,7 +33,9 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js -- --fix"
   },
   "dependencies": {
     "core-js": "^3.19.1",
