--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -24,7 +24,9 @@
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
