refactor: rewrite webpack.config to ts and refactor ts files

--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -8,5 +8,5 @@
     "allowJs": true,
     "moduleResolution": "node"
   },
-  "files": ["src/index.ts", "typings.d.ts"]
+  "files": ["src/index.ts", "typings.d.ts", "webpack.config.ts"]
 }
