--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -18,6 +18,8 @@
     "nouislider": "^15.5.0"
   },
   "devDependencies": {
+    "@types/mini-css-extract-plugin": "^2.4.0",
+    "@types/webpack-dev-server": "^4.5.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "clean-webpack-plugin": "^4.0.0",
