--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.4.0",
+    "@types/node": "^17.0.5",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.5.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -38,7 +40,9 @@
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
