--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -8,5 +8,10 @@
     "allowJs": true,
     "moduleResolution": "node"
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  },
   "files": ["src/index.ts", "typings.d.ts", "webpack.config.ts"]
 }
