--- a/news-JS-main/.eslintrc.json
+++ b/news-JS-main/.eslintrc.json
@@ -1,10 +1,6 @@
 {
     "plugins": ["prettier", "import"],
-    "extends": [
-        "airbnb-typescript/base",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
+    "extends": ["airbnb-typescript/base", "plugin:prettier/recommended", "prettier"],
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module",
