--- a/news-JS-main/tsconfig.json
+++ b/news-JS-main/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "module": "es6",
-    "target": "es6",
-    "allowJs": true,
-    "moduleResolution": "node",
-  }
+    "compilerOptions": {
+        "outDir": "./dist/",
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "module": "es6",
+        "target": "es6",
+        "allowJs": true,
+        "moduleResolution": "node"
+    }
 }
