--- a/museum-webpack/package.json
+++ b/museum-webpack/package.json
@@ -15,19 +15,33 @@
   "license": "ISC",
   "dependencies": {
     "@splidejs/splide": "^3.6.12",
-    "@types/mapbox": "^1.6.42",
     "aos": "^2.3.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "mapbox.js": "^3.3.1",
     "webpack": "^5.68.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/mapbox": "^1.6.42",
+    "@types/node": "^17.0.14",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "@webpack-cli/generators": "^2.4.2",
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-airbnb-base": "^0.0.1-security",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.5.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5",
     "webpack-dev-server": "^4.7.4"
   }
 }
