--- a/museum-webpack/package.json
+++ b/museum-webpack/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@splidejs/splide": "^3.6.12",
     "aos": "^2.3.4",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "commonjs-variables-for-esmodules": "^1.1.0",
     "mapbox.js": "^3.3.1",
     "webpack": "^5.68.0"
   },
@@ -32,8 +32,10 @@
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-airbnb-base": "^0.0.1-security",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "2.5.1",
